--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "browser-sync": "^2.2.4",
     "date-utils": "^1.2.16",
     "gulp": "^3.9.0",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-load-plugins": "^0.8.1",
     "gulp-replace": "^0.5.3",
     "run-sequence": "^1.0.2",
