--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "browser-sync": "^2.2.4",
     "date-utils": "^1.2.16",
     "gulp": "^3.9.0",
+    "gulp-cachebust": "0.0.6",
+    "gulp-concat": "^2.6.0",
     "gulp-file-include": "^0.13.7",
     "gulp-htmlmin": "^1.3.0",
     "gulp-load-plugins": "^0.8.1",
     "gulp-replace": "^0.5.3",
+    "gulp-uglify": "^1.5.1",
     "run-sequence": "^1.0.2",
     "through2": "^0.6.3"
   },
