--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "date-utils": "^1.2.16",
     "gulp": "^3.9.0",
     "gulp-cachebust": "0.0.6",
+    "gulp-cached": "^1.1.0",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.6.0",
     "gulp-file-include": "^0.13.7",
     "gulp-htmlmin": "^1.3.0",
