--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Codelf",
   "version": "0.0.3",
-  "description": "Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project to find real-world usage variable names. ",
+  "description": "Organize your GitHub stars and repositories.Search over projects from GitHub, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project to find real-world usage variable names.",
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.2.4",
