--- a/package.json
+++ b/package.json
@@ -1,37 +1,72 @@
 {
   "name": "Codelf",
-  "version": "6.0.0",
+  "version": "7.0.0",
   "description": "Organize your GitHub stars and repositories.Search over projects from GitHub, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project to find real-world usage variable names.",
-  "dependencies": {},
-  "devDependencies": {
-    "browser-sync": "^2.2.4",
-    "date-utils": "^1.2.16",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-cachebust": "0.0.6",
-    "gulp-cached": "^1.1.0",
-    "gulp-clean": "^0.3.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-file-include": "^0.13.7",
-    "gulp-htmlmin": "^1.3.0",
-    "gulp-load-plugins": "^0.8.1",
-    "gulp-replace": "^0.5.3",
-    "gulp-sass": "^2.3.1",
-    "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
-    "run-sequence": "^1.0.2",
-    "through2": "^0.6.3",
-    "webpack": "^1.12.12",
-    "webpack-stream": "^4.0.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [
     "Codelf",
     "real-world usage variable names",
     "searchcode"
   ],
   "author": "unbug",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "gulp",
+    "build": "NODE_ENV=production gulp build",
+    "dist": "NODE_ENV=production gulp build && gulp dist"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "ansi-colors": "^2.0.5",
+    "babel-eslint": "^8.2.6",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
+    "css-loader": "^1.0.0",
+    "cssnano": "^4.1.4",
+    "del": "^3.0.0",
+    "eslint": "^5.7.0",
+    "eslint-plugin-react": "^7.10.0",
+    "fancy-log": "^1.3.2",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-cachebust": "0.0.10",
+    "gulp-cached": "^1.1.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-csso": "^3.0.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-help": "^1.6.1",
+    "gulp-htmlmin": "^4.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sass-lint": "^1.4.0",
+    "gulp-size": "^3.0.0",
+    "gulp-uglify": "^3.0.1",
+    "gulp-watch": "^5.0.1",
+    "imagemin-pngquant": "^6.0.0",
+    "minimist": "^1.2.0",
+    "node-sass": "^4.9.4",
+    "plugin-error": "^1.0.1",
+    "require-dir": "^1.1.0",
+    "run-sequence": "^2.2.1",
+    "sass-loader": "^7.1.0",
+    "serve-index": "^1.9.1",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9",
+    "webpack-hot-middleware": "^2.24.3",
+    "webpack-merge": "^4.1.4"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "events": "^3.0.0",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.82.5"
+  }
 }
