--- a/package.json
+++ b/package.json
@@ -16,20 +16,20 @@
     "dist": "NODE_ENV=production gulp build && gulp dist"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "ansi-colors": "^2.0.5",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.0.4",
     "browser-sync": "^2.26.3",
-    "css-loader": "^1.0.0",
-    "cssnano": "^4.1.4",
+    "css-loader": "^1.0.1",
+    "cssnano": "^4.1.7",
     "del": "^3.0.0",
-    "eslint": "^5.7.0",
+    "eslint": "^5.10.0",
     "eslint-plugin-react": "^7.10.0",
-    "fancy-log": "^1.3.2",
+    "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-cachebust": "0.0.10",
@@ -49,28 +49,31 @@
     "gulp-watch": "^5.0.1",
     "imagemin-pngquant": "^6.0.0",
     "minimist": "^1.2.0",
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.11.0",
     "plugin-error": "^1.0.1",
-    "require-dir": "^1.1.0",
+    "require-dir": "^1.2.0",
     "run-sequence": "^2.2.1",
     "sass-loader": "^7.1.0",
     "serve-index": "^1.9.1",
-    "webpack": "^4.20.2",
+    "webpack": "^4.28.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
+    "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.1.4"
+    "webpack-merge": "^4.1.5"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
+    "@babel/polyfill": "^7.2.3",
     "animate.css": "^3.7.0",
-    "clipboard": "^2.0.4",
     "events": "^3.0.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "file-saver": "^2.0.0",
+    "lodash": "^4.17.11",
+    "nprogress": "^0.2.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
+    "clipboard": "^2.0.4",
     "whatwg-fetch": "^3.0.0"
   }
 }
