--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@babel/preset-react": "^7.0.0",
     "ansi-colors": "^2.0.5",
     "babel-eslint": "^8.2.6",
-    "babel-loader": "^8.0.4",
+    "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "del": "^3.0.0",
-    "eslint": "^5.10.0",
-    "eslint-plugin-react": "^7.10.0",
+    "eslint": "^5.12.0",
+    "eslint-plugin-react": "^7.12.3",
     "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
@@ -47,8 +47,9 @@
     "gulp-sass-lint": "^1.4.0",
     "gulp-size": "^3.0.0",
     "gulp-uglify": "^3.0.1",
+    "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
-    "imagemin-pngquant": "^6.0.0",
+    "imagemin-pngquant": "^6.0.1",
     "minimist": "^1.2.0",
     "node-sass": "^4.11.0",
     "plugin-error": "^1.0.1",
@@ -57,11 +58,11 @@
     "sass-loader": "^7.1.0",
     "serve-index": "^1.9.1",
     "through2": "^3.0.0",
-    "webpack": "^4.28.1",
-    "webpack-cli": "^3.1.2",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
-    "webpack-merge": "^4.1.5"
+    "webpack-merge": "^4.2.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.3",
