--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Codelf",
-  "version": "7.0.0",
+  "version": "8.0.0",
   "description": "Organize your GitHub stars and repositories.Search over projects from GitHub, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project to find real-world usage variable names.",
   "keywords": [
     "Codelf",
@@ -8,7 +8,7 @@
     "searchcode"
   ],
   "author": "unbug",
-  "license": "MIT",
+  "license": "snts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp",
