--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "css-loader": "^1.0.1",
     "cssnano": "^4.1.7",
     "del": "^3.0.0",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react-hooks": "^1.0.1",
     "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
@@ -59,8 +60,8 @@
     "sass-loader": "^7.1.0",
     "serve-index": "^1.9.1",
     "through2": "^3.0.0",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
+    "webpack": "^4.29.3",
+    "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.2.1"
@@ -74,8 +75,8 @@
     "lodash": "^4.17.11",
     "mark.js": "^8.11.1",
     "nprogress": "^0.2.0",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
     "react-router-dom": "^4.3.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
