--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-eslint": "^5.0.0",
     "gulp-help": "^1.6.1",
     "gulp-htmlmin": "^4.0.0",
+    "gulp-if": "^2.0.2",
     "gulp-imagemin": "^4.1.0",
     "gulp-load-plugins": "^1.5.0",
     "gulp-replace": "^1.0.0",
