--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
+    "gulp-babel-minify": "^0.5.0",
     "gulp-cachebust": "0.0.10",
     "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
@@ -49,8 +50,6 @@
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.4.0",
     "gulp-size": "^3.0.0",
-    "gulp-uglify": "^3.0.1",
-    "gulp-uglify-es": "^1.0.4",
     "gulp-watch": "^5.0.1",
     "imagemin-pngquant": "^6.0.1",
     "minimist": "^1.2.0",
