--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "gh-pages": "npm run dist && sleep 3 && git add dist/ && git commit -m \"build dist\" && git push origin `git subtree split --prefix dist HEAD`:gh-pages --force"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/core": "^7.3.3",
+    "@babel/plugin-proposal-class-properties": "^7.3.3",
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
@@ -27,11 +27,11 @@
     "babel-loader": "^8.0.5",
     "browser-sync": "^2.26.3",
     "css-loader": "^1.0.1",
-    "cssnano": "^4.1.7",
+    "cssnano": "^4.1.10",
     "del": "^3.0.0",
-    "eslint": "^5.13.0",
+    "eslint": "^5.14.0",
     "eslint-plugin-react": "^7.12.4",
-    "eslint-plugin-react-hooks": "^1.0.1",
+    "eslint-plugin-react-hooks": "^1.0.2",
     "fancy-log": "^1.3.3",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
@@ -60,7 +60,7 @@
     "sass-loader": "^7.1.0",
     "serve-index": "^1.9.1",
     "through2": "^3.0.0",
-    "webpack": "^4.29.3",
+    "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.10",
     "webpack-hot-middleware": "^2.24.3",
@@ -70,13 +70,14 @@
     "@babel/polyfill": "^7.2.3",
     "animate.css": "^3.7.0",
     "clipboard": "^2.0.4",
+    "code-prettify": "^0.1.0",
     "events": "^3.0.0",
     "file-saver": "^2.0.0",
     "lodash": "^4.17.11",
     "mark.js": "^8.11.1",
     "nprogress": "^0.2.0",
-    "react": "^16.8.1",
-    "react-dom": "^16.8.1",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
     "react-router-dom": "^4.3.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.82.5",
