--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Codelf",
-  "version": "8.0.0",
-  "description": "Organize your GitHub stars and repositories.Search over projects from GitHub, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Project to find real-world usage variable names.",
+  "version": "8.1.0",
+  "description": "A search tool helps dev to solve the naming variable/function name problem.",
   "keywords": [
     "Codelf",
     "real-world usage variable names",
@@ -17,57 +17,55 @@
     "gh-pages": "npm run dist && sleep 3 && git add dist/ && git commit -m \"build dist\" && git push origin `git subtree split --prefix dist HEAD`:gh-pages --force"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.5",
+    "@babel/core": "^7.6.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-optional-chaining": "^7.2.0",
-    "@babel/preset-env": "^7.5.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
-    "ansi-colors": "^2.0.5",
-    "babel-eslint": "^8.2.6",
+    "ansi-colors": "^4.1.1",
+    "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
     "browser-sync": "^2.26.7",
-    "css-loader": "^1.0.1",
+    "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
-    "del": "^3.0.0",
-    "eslint": "^5.16.0",
+    "del": "^5.1.0",
+    "eslint": "^6.3.0",
     "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "fancy-log": "^1.3.3",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.0",
     "gulp-babel-minify": "^0.5.1",
     "gulp-cachebust": "0.0.10",
     "gulp-cached": "^1.1.1",
     "gulp-concat": "^2.6.1",
     "gulp-csso": "^3.0.1",
-    "gulp-eslint": "^5.0.0",
-    "gulp-help": "^1.6.1",
-    "gulp-htmlmin": "^4.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-load-plugins": "^1.6.0",
+    "gulp-eslint": "^6.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.1.0",
+    "gulp-load-plugins": "^2.0.1",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sass-lint": "^1.4.0",
     "gulp-size": "^3.0.0",
     "gulp-watch": "^5.0.1",
-    "imagemin-pngquant": "^6.0.1",
+    "imagemin-pngquant": "^8.0.0",
     "minimist": "^1.2.0",
     "node-sass": "^4.12.0",
     "plugin-error": "^1.0.1",
     "require-dir": "^1.2.0",
-    "run-sequence": "^2.2.1",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^8.0.0",
     "serve-index": "^1.9.1",
     "through2": "^3.0.0",
     "webpack": "^4.39.3",
-    "webpack-cli": "^3.3.7",
+    "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0",
     "webpack-hot-middleware": "^2.25.0",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4",
+    "@babel/polyfill": "^7.6.0",
     "animate.css": "^3.7.2",
     "clipboard": "^2.0.4",
     "code-prettify": "^0.1.0",
@@ -78,9 +76,9 @@
     "nprogress": "^0.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^5.0.1",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.82.5",
+    "semantic-ui-react": "^0.88.1",
     "spark-md5": "^3.0.0",
     "whatwg-fetch": "^3.0.0"
   }
