--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Codelf",
   "version": "8.1.0",
-  "description": "A search tool helps dev to solve the naming variable/function name problem.",
+  "description": "A search tool helps dev to solve the naming things problem.",
   "keywords": [
     "Codelf",
     "real-world usage variable names",
